--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -81,6 +81,12 @@
   font-size: 4rem;
 }
 
+.subtitle {
+  margin-top: 0.4em;
+  line-height: 1.15;
+  font-size: 2rem;
+}
+
 .title,
 .description {
   text-align: center;
