--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,11 +31,12 @@
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
+  background-color: white;
   border-radius: 4px;
   box-sizing: border-box;
 }
 .form input[type="submit"] {
-  width: 20%;
+  width: 40%;
   font-size: 0.8em;
   background-color: #e50914;
   color: #ffffff;
