--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.form input[type="text"] {
+.form input[type='text'] {
   width: 50%;
   font-size: 0.8em;
   padding: 12px 20px;
@@ -35,7 +35,7 @@
   border-radius: 4px;
   box-sizing: border-box;
 }
-.form input[type="submit"] {
+.form input[type='submit'] {
   width: 40%;
   font-size: 0.8em;
   background-color: #e50914;
@@ -50,19 +50,10 @@
 }
 
 .footer {
-  display: flex;
-  flex: 1;
+  width: 100%;
+  height: 200px;
   padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .title a {
@@ -113,7 +104,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 100%;
 }
 
 .card {
