--- a/pages/styles.module.scss
+++ b/pages/styles.module.scss
@@ -9,165 +9,175 @@ $hover-color: rgba(255, 255, 255, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   min-height: 100vh;
   background-color: $background-color;
   color: $text-color;
   font-family: 'Arial', sans-serif;
-}
 
-.main {
-  max-width: 1200px;
-  padding: 2rem;
-  text-align: center;
-}
+  .main {
+    max-width: 1200px;
+    padding: 2rem;
+    text-align: center;
 
-.title {
-  font-size: 2.5rem;
-  margin-bottom: 0.5rem;
-  color: $primary-color;
-}
-
-.subtitle {
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-  color: lighten($primary-color, 20%);
-}
-
-.description {
-  margin-bottom: 2rem;
-
-  .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-
-    select,
-    input[type='text'],
-    input[type='submit'],
-    input[type='button'] {
-      padding: 0.75rem;
-      border: 2px solid $primary-color;
-      border-radius: 5px;
-      font-size: 1rem;
-      background: $secondary-color;
-      color: $text-color;
-      width: 100%;
-      max-width: 300px;
-
-      &:focus {
-        outline: none;
-        border-color: lighten($primary-color, 20%);
-      }
+    .title {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: $primary-color;
     }
 
-    input[type='submit'],
-    input[type='button'] {
-      cursor: pointer;
-      background: $primary-color;
-      border: none;
-      transition: background 0.3s;
-
-      &:hover {
-        background: lighten($primary-color, 10%);
-      }
-    }
-  }
-}
-
-.grid {
-  height: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 1.5rem;
-  margin-top: 2rem;
-}
-
-.card {
-  background: $secondary-color;
-  border-radius: 12px;
-  padding: 1.5rem;
-  text-align: center; // Center-align the content for a cleaner look
-  transition: transform 0.3s, box-shadow 0.3s;
-  color: $text-color;
-  text-decoration: none;
-  overflow: hidden;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-
-  &:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
-  }
-
-  .movieImageBox {
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 8px;
-    margin-bottom: 1rem;
-    border: 2px solid lighten($secondary-color, 10%);
-    background-color: lighten($secondary-color, 5%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    img {
-      width: auto; // Maintain aspect ratio
-      height: 100%; // Fill height without distorting the image
-      transition: transform 0.3s;
-
-      &:hover {
-        transform: scale(1.1); // Subtle zoom effect on hover
-      }
-    }
-  }
-
-  h2 {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin: 0.75rem 0;
-    color: lighten($primary-color, 15%);
-    text-transform: capitalize; // Capitalize movie titles
-  }
-
-  p {
-    font-size: 1rem;
-    margin: 0.5rem 0;
-    color: lighten($text-color, 20%);
-    line-height: 1.5;
-
-    &:nth-of-type(1) {
-      font-weight: bold;
-    }
-
-    &:nth-of-type(2) {
+    .subtitle {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
       color: lighten($primary-color, 20%);
     }
-  }
 
-  .infoRow {
+    .description {
+      margin-bottom: 2rem;
+
+      .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+
+        select,
+        input[type='text'],
+        input[type='submit'],
+        input[type='button'] {
+          padding: 0.75rem;
+          border: 2px solid $primary-color;
+          border-radius: 5px;
+          font-size: 1rem;
+          background: $secondary-color;
+          color: $text-color;
+          width: 100%;
+          max-width: 300px;
+
+          &:focus {
+            outline: none;
+            border-color: lighten($primary-color, 20%);
+          }
+        }
+
+        input[type='submit'],
+        input[type='button'] {
+          cursor: pointer;
+          background: $primary-color;
+          border: none;
+          transition: background 0.3s;
+
+          &:hover {
+            background: lighten($primary-color, 10%);
+          }
+        }
+      }
+    }
+
+    .grid {
+      height: 100%;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 1.5rem;
+      margin-top: 2rem;
+    }
+
+    .card {
+      background: $secondary-color;
+      border-radius: 12px;
+      padding: 1.5rem;
+      text-align: center; // Center-align the content for a cleaner look
+      transition: transform 0.3s, box-shadow 0.3s;
+      color: $text-color;
+      text-decoration: none;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+
+      &:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+      }
+
+      .movieImageBox {
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        border: 2px solid lighten($secondary-color, 10%);
+        background-color: lighten($secondary-color, 5%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          width: auto; // Maintain aspect ratio
+          height: 100%; // Fill height without distorting the image
+          transition: transform 0.3s;
+
+          &:hover {
+            transform: scale(1.1); // Subtle zoom effect on hover
+          }
+        }
+      }
+
+      h2 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin: 0.75rem 0;
+        color: lighten($primary-color, 15%);
+        text-transform: capitalize; // Capitalize movie titles
+      }
+
+      p {
+        font-size: 1rem;
+        margin: 0.5rem 0;
+        color: lighten($text-color, 20%);
+        line-height: 1.5;
+
+        &:nth-of-type(1) {
+          font-weight: bold;
+        }
+
+        &:nth-of-type(2) {
+          color: lighten($primary-color, 20%);
+        }
+      }
+
+      .infoRow {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 0.9rem;
+        color: lighten($text-color, 30%);
+        margin-top: 1rem;
+
+        span {
+          font-weight: bold;
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+  .footer {
+    width: 100%;
+    height: 100px;
+    margin-top: 2rem;
+    padding: 0 40px;
+    background: $secondary-color;
+    text-align: center;
+    font-size: 0.9rem;
+    border-top: 1px solid lighten($secondary-color, 10%);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 0.9rem;
-    color: lighten($text-color, 30%);
-    margin-top: 1rem;
-
-    span {
-      font-weight: bold;
-      font-size: 1rem;
+    .footerBuilt {
+      display: flex;
+      align-items: center;
+    }
+    .footerLinks {
+      display: flex;
+      gap: 20px;
     }
   }
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  margin-top: 2rem;
-  padding: 1rem;
-  background: $secondary-color;
-  text-align: center;
-  font-size: 0.9rem;
-  border-top: 1px solid lighten($secondary-color, 10%);
 }
